// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DailyStepsScreen should render FitKit permissions screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={false}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
          type="default"
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacityWithState>,
        <DailyStepsFitKitAuthorise
          onPress={[MockFunction]}
        />,
        null,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "gray_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            hasWhiteGlow={false}
            isGrayScale={true}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "hasWhiteGlow": false,
            "isGrayScale": true,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsFitKitAuthorise
            onPress={[MockFunction]}
          />,
          null,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "gray_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render FitKit unavailable screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={false}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
          type="default"
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacityWithState>,
        <DailyStepsFitKitUnavailable />,
        null,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "hasWhiteGlow": false,
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsFitKitUnavailable />,
          null,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render daily streak 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    displayStreak={true}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
          type="default"
        />,
        <Pad
          height={80}
        />,
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacityWithState>,
        <DailyStepsOnline
          coinsToday={0}
          onCtaPress={[MockFunction]}
          steps={0}
          textStyle={
            Object {
              "color": "#333333",
            }
          }
        />,
        <Streak
          currentStreak={0}
          isFinished={false}
          isOnline={true}
          maxStreak={4}
          onPress={[MockFunction]}
          type="forest"
        />,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 80,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "hasWhiteGlow": false,
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "coinsToday": 0,
          "onCtaPress": [MockFunction],
          "steps": 0,
          "textStyle": Object {
            "color": "#333333",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "currentStreak": 0,
          "isFinished": false,
          "isOnline": true,
          "maxStreak": 4,
          "onPress": [MockFunction],
          "type": "forest",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />,
          <Pad
            height={80}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsOnline
            coinsToday={0}
            onCtaPress={[MockFunction]}
            steps={0}
            textStyle={
              Object {
                "color": "#333333",
              }
            }
          />,
          <Streak
            currentStreak={0}
            isFinished={false}
            isOnline={true}
            maxStreak={4}
            onPress={[MockFunction]}
            type="forest"
          />,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "onCtaPress": [MockFunction],
            "steps": 0,
            "textStyle": Object {
              "color": "#333333",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "currentStreak": 0,
            "isFinished": false,
            "isOnline": true,
            "maxStreak": 4,
            "onPress": [MockFunction],
            "type": "forest",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
          type="default"
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacityWithState>,
        <DailyStepsOnline
          coinsToday={0}
          onCtaPress={[MockFunction]}
          steps={0}
          textStyle={
            Object {
              "color": "#333333",
            }
          }
        />,
        null,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "hasWhiteGlow": false,
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "coinsToday": 0,
          "onCtaPress": [MockFunction],
          "steps": 0,
          "textStyle": Object {
            "color": "#333333",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsOnline
            coinsToday={0}
            onCtaPress={[MockFunction]}
            steps={0}
            textStyle={
              Object {
                "color": "#333333",
              }
            }
          />,
          null,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "onCtaPress": [MockFunction],
            "steps": 0,
            "textStyle": Object {
              "color": "#333333",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render loading screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={true}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
          type="default"
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={true}
          />
        </TouchableOpacityWithState>,
        <DailyStepsLoading />,
        null,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            hasWhiteGlow={false}
            isGrayScale={false}
            isLoading={true}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "hasWhiteGlow": false,
            "isGrayScale": false,
            "isLoading": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={true}
            />
          </TouchableOpacityWithState>,
          <DailyStepsLoading />,
          null,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={false}
              isLoading={true}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": false,
              "isLoading": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render offline screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={false}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
          type="default"
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacityWithState
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            hasWhiteGlow={false}
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacityWithState>,
        <DailyStepsOffline
          isLight={false}
          lastUpdate="thing"
        />,
        null,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "gray_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            hasWhiteGlow={false}
            isGrayScale={true}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "hasWhiteGlow": false,
            "isGrayScale": true,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isLight": false,
          "lastUpdate": "thing",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
            type="default"
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacityWithState
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacityWithState>,
          <DailyStepsOffline
            isLight={false}
            lastUpdate="thing"
          />,
          null,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "gray_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              hasWhiteGlow={false}
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hasWhiteGlow": false,
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLight": false,
            "lastUpdate": "thing",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
